--- a/scripts/download.html
+++ b/scripts/download.html
@@ -29,14 +29,15 @@
                 <a href="%(win64_url)s">LiClipse %(liclipse_version)s Windows (64 bits)</a>
             </li>
             <li>
-                <a href="%(macos_url)s">LiClipse %(liclipse_version)s Mac OS (64 bits)</a>
+                <a href="%(linux64_url)s">LiClipse %(liclipse_version)s Linux (64 bits)</a>
             </li>
             <li>
-                <a href="%(linux64_url)s">LiClipse %(liclipse_version)s Linux (64 bits)</a>
+                <a href="%(macos_url)s">LiClipse %(liclipse_version)s Mac OS (64 bits)</a>
             </li>
             <li>
                 <a href="%(update_site_url)s">LiClipse %(liclipse_version)s Local Update Site</a>
             </li>
+            <strong>Important for Mac:</strong><br>See <a href="#macos">instructions</a> to fix "LiClipse.app" is damaged and can't be opened issue.
         </ul>
         Note that 32 bit standalone versions are no longer available (so, if you need to work on a 32 bit machine,
         please use an older version of LiClipse).
@@ -75,7 +76,7 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .dmg file from <a href="%(folder_url)s">MediaFire</a>, mount it as a disk and copy it (drag it) to the Applications dir.
+        Download the .tar.gz file from <a href="%(folder_url)s">MediaFire</a>, double-click to extract it in the Downloads Folder then move it (drag it) to the <strong>/Applications</strong> dir.
         <br/>
         <br/>
 
@@ -83,7 +84,7 @@
         <br/>
         <br/>
 
-        On latest Mac OS X versions, after extracting the DMG, when executing LiClipse.app, you may get an error such as:
+        On latest Mac OS X versions, after extracting the .tar.gz, when executing LiClipse.app, you may get an error such as:
         <br/>
         <br/>
 
@@ -100,14 +101,14 @@
         <br/>
 
 
-        <strong>xattr -d com.apple.quarantine /Applications/LiClipse.app</strong><br/>
-
-        <strong>xattr -d com.apple.quarantine /Applications/LiClipse.app/MacOS/LiClipse</strong>
-
+        <strong>xattr -d com.apple.quarantine /Applications/LiClipse.app</strong>
         <br/>
         <br/>
         (note that the path may have to be updated if you installed it somewhere else).
         <br/>
+        <br/>
+        p.s.: if you want to verify the integrity of the download, it's possible to verify the SHA256 of the downloaded file following the instructions in:
+        <a href="%(sha256_and_install_instructions_url)s">LiClipse %(liclipse_version)s files SHA256</a>.
 
         <br/>
         <br/>
@@ -167,9 +168,9 @@
         <br/>
 
 
-        <h3>Requirement: Eclipse 4.6</h3>
+        <h3>Requirement: Eclipse 4.20</h3>
 
-        Note that to be installed, LiClipse requires Eclipse 4.6 (Neon) onwards.
+        Note that to be installed, LiClipse requires Eclipse 4.20 (2021-06) onwards.
         <br/>
         <br/>
 
