--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,20 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 8.0.0</h3>
+        <ul>
+        	<li>Updated to Eclipse <strong>2021-06 (4.20)</strong>.</li>
+        	<li>Updated PyDev to 9.0.0.</li>
+        	<ul>
+        		<li>Initial support for Python 3.10.</li>
+        		<li>Support for running with Java 16.</li>
+        		<li>Opt-in support for using typeshed module.</li>
+        		<li>Debugger improvements.</li>
+        		<li>Performance improvements when traversing files to index the PYTHONPATH.</li>
+        	</ul>
+        	<li>Updated EGit.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 7.3.0</h3>
         <ul>
         	<li>Updated PyDev to 8.3.0.</li>
