Homepage updated for 8.1.0 release.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 8.1.0</h3>
+        <ul>
+        	<li>Updated to Eclipse <strong>2021-09 (4.21)</strong>.</li>
+        	<li>Updated PyDev to 9.1.0.</li>
+        	<ul>
+        		<li>Improved Python 3.10 support in debugger.</li>
+        		<li>Type inference improvements.</li>
+        		<li>Properly loading environment variables from conda.</li>
+        		<li>Fixed issue which could lead to infinite recursion.</li>
+        	</ul>
+        	<li>Fixed issue in Java JRE bundling in Mac OS.</li>
+        </ul>
+
         <h3>Release Highlights for LiClipse 8.0.0</h3>
         <ul>
         	<li>Updated to Eclipse <strong>2021-06 (4.20)</strong>.</li>
@@ -114,24 +127,6 @@
 		        <li>Environment variables are now supported in .pydevproject (expected format: <strong>${env_var:VAR_NAME}</strong>).</li>
         	</ul>
         </ul>
-
-        <h3>Release Highlights for LiClipse 7.2.0</h3>
-        <ul>
-        	<li>Updated to Eclipse <strong>2020-12 (4.18)</strong>.</li>
-        	<ul>
-	        	<li><strong>Java 11 is now required.</strong></li>
-        	</ul>
-        	<li>Updated PyDev to 8.2.0.</li>
-        	<ul>
-        		<li>Integrate with Flake8.</li>
-        		<li>Comments added at current indentation (by default).</li>
-        		<li>Single linter call (PyLint/Flake8/MyPy) when requested for a folder.</li>
-        		<li>Improvements in interpreter configuration.</li>
-        	</ul>
-        	<li>Updated EGit.</li>
-        </ul>
-
-
 
         <p><a href="history.html">View highlights for previous releases</a></p>
         <p>Supported languages feature syntax highlighting, template completion,
