--- a/text/updates/index.html
+++ b/text/updates/index.html
@@ -2,4 +2,5 @@ LiClipseText update site aggregator.<br/>
 <br/>
 Bundles the following LiClipseText update sites:<br/>
 <br/>
+<a href="https://github.com/fabioz/LiClipseText/releases/download/liclipsetext_2_4_0">https://github.com/fabioz/LiClipseText/releases/download/liclipsetext_2_4_0</a><br/>
 <a href="https://github.com/fabioz/LiClipseText/releases/download/liclipsetext_2_3_0">https://github.com/fabioz/LiClipseText/releases/download/liclipsetext_2_3_0</a><br/>
