--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 9.0.1</h3>
+        <ul>
+        	<li>Updated <strong>PyDev to 10.0.1</strong>.</li>
+        	<ul>
+			    <li>Fixed issue parsing exception groups on Python 3.11.</li>
+			    <li>Fixed issue which prevented JDT (Java) files from being opened in the Project Explorer.</li>
+			    <li>A better error message is shown when using an unsupported Python version.</li>
+			
+			    <li><strong>Debugging</strong></li>
+			    <ul>
+		            <li>Updated Linux DLLs to fix <strong>PyInt_FromLong</strong> not found in Python 3.11.</li>
+		            <li>Consider that paths are not case sensitive on Mac OS.</li>
+	        	</ul>
+        	</ul>
+		</ul>
+		        	
         <h3>Release Highlights for LiClipse 9.0.0</h3>
         <ul>
         	<li>Updated to Eclipse <strong>2022-09 (4.25)</strong>.</li>
