--- a/scripts/download.html
+++ b/scripts/download.html
@@ -32,7 +32,10 @@
                 <a href="%(linux64_url)s">LiClipse %(liclipse_version)s Linux (64 bits)</a>
             </li>
             <li>
-                <a href="%(macos_url)s">LiClipse %(liclipse_version)s Mac OS (64 bits)</a>
+                <a href="%(macos_aarch64_url)s">LiClipse %(liclipse_version)s Mac OS (aarch64 bits)</a>
+            </li>
+            <li>
+                <a href="%(macos_x86_64_url)s">LiClipse %(liclipse_version)s Mac OS (x86 64 bits)</a>
             </li>
             <li>
                 <a href="%(update_site_url)s">LiClipse %(liclipse_version)s Local Update Site</a>
