--- a/scripts/index.html
+++ b/scripts/index.html
@@ -34,6 +34,22 @@
             </li>
         </ul>
 
+        <h3>Release Highlights for LiClipse 10.0.1</h3>
+        <ul>
+        	<li>LiClipse is now available for <strong>Mac M1</strong> (aarch64).</li>
+        	<li>LiClipse is now notarized on <strong>Mac OS</strong>.</li>
+        	<ul>
+        		<li>Note on Mac OS installing new plugins won't work properly right now (if you need other plugins please use standard Eclipse and install LiClipse as a plugin in it).</li>
+        	</ul>
+        	<li>The configuration files are now saved out of the installation folder by default (and thus are reused when installing a new version).</li>
+        	<ul>
+        		<li>In <strong>Windows</strong> the settings will now be under <strong>%USERPROFILE%/.liclipse/config</strong></li>
+        		<li>In <strong>Linux</strong> and <strong>Mac OS</strong> the settings will now be under <strong>~/.liclipse/config</strong></li>
+        	</ul>
+        	<li>Updated <strong>PyDev to 10.1.4</strong>.</li>
+        	<li>Updated to Eclipse <strong>2022-12 (4.26)</strong>.</li>
+		</ul>
+
         <h3>Release Highlights for LiClipse 9.0.1</h3>
         <ul>
         	<li>Updated <strong>PyDev to 10.0.1</strong>.</li>
