--- a/languages.html
+++ b/languages.html
@@ -105,6 +105,7 @@
             <li>SCSS</li>
             <li>StringTemplate</li>
             <li>Swift</li>
+            <li>TOML</li>
             <li>TypeScript</li>
             <li>Windows bat files</li>
             <li>XML</li>
