--- a/scripts/languages.html
+++ b/scripts/languages.html
@@ -51,6 +51,7 @@
             <li>SCSS</li>
             <li>StringTemplate</li>
             <li>Swift</li>
+            <li>TOML</li>
             <li>TypeScript</li>
             <li>Windows bat files</li>
             <li>XML</li>
