--- a/text/index.html
+++ b/text/index.html
@@ -268,6 +268,20 @@
         </p>
         <h1>Releases information</h1>
 
+    	<h3>Release 2.5.0 (2023-10-08)</h3>
+    	<ul>
+    		<li>A <strong>toml</strong> textmate bundle was added to the builtin bundles.</li>
+    		<li>Fixed issue where a result in the file search could end up throwing an exception.</li>
+    		<li><strong>org.joni</strong> is now vendored to avoid conflicts with other installed versions.</li>
+    	</ul>
+        <br>
+
+    	<h3>Release 2.4.0 (2022-03-05)</h3>
+    	<ul>
+    		<li>Fixed deadlock which could happen when editing text.</li>
+    	</ul>
+        <br>
+
     	<h3>Release 2.3.0 (2021-04-29)</h3>
     	<ul>
     		<li>Fixes to use Regexp for navigation (ctrl+shift+up/down).</li>
@@ -276,7 +290,7 @@
     		<li>Outline for JSON.</li>
     	</ul>
         <br>
-        
+
     	<h3>Release 2.2.0 (2020-12-06)</h3>
     	<ul>
     		<li>Updated TextMate grammar parsing.</li>
