--- a/download.html
+++ b/download.html
@@ -80,19 +80,19 @@
         <br/>
         <ul>
             <li>
-                <a href="https://www.mediafire.com/file_premium/lg3vafz4kky74rh/liclipse_10.0.0_win32.x86_64.exe">LiClipse 10.0.0 Windows (64 bits)</a>
+                <a href="https://www.mediafire.com/file_premium/eiaq34vm0e1528q/liclipse_10.2.0_win32.x86_64.exe">LiClipse 10.2.0 Windows (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file_premium/vtiff9ynid04bbq/liclipse_10.0.0_linux.gtk.x86_64.tar.gz">LiClipse 10.0.0 Linux (64 bits)</a>
+                <a href="https://www.mediafire.com/file_premium/kf0vqv93qf6hszo/liclipse_10.2.0_linux.gtk.x86_64.tar.gz">LiClipse 10.2.0 Linux (64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file_premium/28i3f4nn2flpryf/liclipse_10.0.0_macosx.cocoa.aarch64.tar.gz">LiClipse 10.0.0 Mac OS (Mac M1, Aarch64)</a>
+                <a href="https://www.mediafire.com/file_premium/qz5gldjdf1uqz9h/liclipse_10.2.0_macosx.cocoa.aarch64.tar.gz">LiClipse 10.2.0 Mac OS (Mac M1, Aarch64)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file_premium/5f5bxrjwhyb1ost/liclipse_10.0.0_macosx.cocoa.x86_64.tar.gz">LiClipse 10.0.0 Mac OS (x86, 64 bits)</a>
+                <a href="https://www.mediafire.com/file_premium/d10g2kf87k9nuq3/liclipse_10.2.0_macosx.cocoa.x86_64.tar.gz">LiClipse 10.2.0 Mac OS (x86, 64 bits)</a>
             </li>
             <li>
-                <a href="https://www.mediafire.com/file_premium/johrf5ksmxki9hf/UPDATE_SITE_10.0.0.zip">LiClipse 10.0.0 Local Update Site</a>
+                <a href="https://www.mediafire.com/file_premium/jjxf2wjalzte0v0/UPDATE_SITE_10.2.0.zip">LiClipse 10.2.0 Local Update Site</a>
             </li>
         </ul>
         Note that 32 bit standalone versions are no longer available (so, if you need to work on a 32 bit machine,
@@ -100,7 +100,7 @@
         <br/>
         <br/>
         It's possible to verify the SHA256 of the downloaded file in:
-        <a href="https://www.mediafire.com/file_premium/soarq7horn3442n/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 10.0.0 files SHA256</a>.
+        <a href="https://www.mediafire.com/file_premium/xiea7edu229x4id/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 10.2.0 files SHA256</a>.
         <br/>
         <br/>
         Older versions may be downloaded from <a href="https://www.mediafire.com/folder/ka5iei6qnyaq4/LiClipse">MediaFire</a>
@@ -127,20 +127,20 @@
 
         <hr/><h2 id="windows">Native Windows Install</h2>
 
-        Download the .exe file from <a href="https://www.mediafire.com/file_premium/lg3vafz4kky74rh/liclipse_10.0.0_win32.x86_64.exe">MediaFire</a> and run it locally, following the installer instructions.
+        Download the .exe file from <a href="https://www.mediafire.com/file_premium/eiaq34vm0e1528q/liclipse_10.2.0_win32.x86_64.exe">MediaFire</a> and run it locally, following the installer instructions.
         <br/>
         <br/>
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .tar.gz file (for Mac M1 <a href="https://www.mediafire.com/file_premium/28i3f4nn2flpryf/liclipse_10.0.0_macosx.cocoa.aarch64.tar.gz">download aarch64 version from MediaFire</a> and for Intel 
-        <a href="https://www.mediafire.com/file_premium/5f5bxrjwhyb1ost/liclipse_10.0.0_macosx.cocoa.x86_64.tar.gz">download x86_64 version from MediaFire</a>), double-click to extract it in the Downloads Folder then move it (drag it) to the <strong>/Applications</strong> dir.
+        Download the .tar.gz file (for Mac M1 <a href="https://www.mediafire.com/file_premium/qz5gldjdf1uqz9h/liclipse_10.2.0_macosx.cocoa.aarch64.tar.gz">download aarch64 version from MediaFire</a> and for Intel 
+        <a href="https://www.mediafire.com/file_premium/d10g2kf87k9nuq3/liclipse_10.2.0_macosx.cocoa.x86_64.tar.gz">download x86_64 version from MediaFire</a>), double-click to extract it in the Downloads Folder then move it (drag it) to the <strong>/Applications</strong> dir.
         Note that both <strong>LiClipse.app</strong> as well as <strong>LiClipseJre19.app</strong> must be moved and always kept side by side.
         <br/>
         <br/>
 
         p.s.: if you want to verify the integrity of the download, it's possible to verify the SHA256 of the downloaded file following the instructions in:
-        <a href="https://www.mediafire.com/file_premium/soarq7horn3442n/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 10.0.0 files SHA256</a>.
+        <a href="https://www.mediafire.com/file_premium/xiea7edu229x4id/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 10.2.0 files SHA256</a>.
 
         <br/>
         <br/>
@@ -149,7 +149,7 @@
         <br/><hr/><h2 id="linux">Native Linux Install</h2>
 
 
-        Download the .tar.gz from <a href="https://www.mediafire.com/folder/3h65nwjxhv0nu/LiClipse_10.0.0">MediaFire</a>.
+        Download the .tar.gz from <a href="%(folder_url)s">MediaFire</a>.
         <br/>
         <br/>
 
@@ -183,7 +183,7 @@
         <br/><hr/><h2 id="update_site">Update Site Install</h2>
 
         To use the update site, download the <strong>UPDATE SITE.zip</strong> from
-        <a href="https://www.mediafire.com/folder/3h65nwjxhv0nu/LiClipse_10.0.0">MediaFire</a>,
+        <a href="%(folder_url)s">MediaFire</a>,
         extract it in a folder, or use the URL: <a href="http://update.liclipse.com/latest">http://update.liclipse.com/latest</a> then,
         on Eclipse (or a previously downloaded LiClipse) go to:
         <br/>
