--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
         <ul>
         	<li>Updated to Eclipse <strong>2023-09 (4.29)</strong>.</li>
         	<li><strong>Java 17</strong> is now required.</li>
+        	<li>Updated <strong>LiClipseText to 2.5.0</strong>.</li>
+        	<ul>
+        		<li>Support for <strong>toml</strong> files</li>
+        	</ul>
         	<li>Updated <strong>PyDev to 11.0.1</strong>.</li>
         	<ul>
         		<li>Support for Python 3.12</li>
