Update Mac OS instructions regarding the quarantine flag.

--- a/download.html
+++ b/download.html
@@ -133,14 +133,18 @@
 
         <br/><hr/><h2 id="macos">Native Mac OS Install</h2>
 
-        Download the .tar.gz file (for Mac M1 <a href="https://www.mediafire.com/file_premium/qz5gldjdf1uqz9h/liclipse_10.2.0_macosx.cocoa.aarch64.tar.gz">download aarch64 version from MediaFire</a> and for Intel 
+        Download the .tar.gz file (for Mac M1 <a href="https://www.mediafire.com/file_premium/qz5gldjdf1uqz9h/liclipse_10.2.0_macosx.cocoa.aarch64.tar.gz">download aarch64 version from MediaFire</a> and for Intel
         <a href="https://www.mediafire.com/file_premium/d10g2kf87k9nuq3/liclipse_10.2.0_macosx.cocoa.x86_64.tar.gz">download x86_64 version from MediaFire</a>), double-click to extract it in the Downloads Folder then move it (drag it) to the <strong>/Applications</strong> dir.
         Note that both <strong>LiClipse.app</strong> as well as <strong>LiClipseJre19.app</strong> must be moved and always kept side by side.
         <br/>
         <br/>
 
-        p.s.: if you want to verify the integrity of the download, it's possible to verify the SHA256 of the downloaded file following the instructions in:
-        <a href="https://www.mediafire.com/file_premium/xiea7edu229x4id/SHA256_AND_INSTALL_INSTRUCTIONS.txt">LiClipse 10.2.0 files SHA256</a>.
+        Also, on latest Mac OS X versions, after extracting the .tar.gz, when executing LiClipse.app, you may get an error. In this case,
+        you must remove the quarantine flag:
+        <br/>
+        <br/>
+
+        <strong>xattr -d com.apple.quarantine /Applications/LiClipse.app</strong>
 
         <br/>
         <br/>
